<resources>
    <string name="app_name">Shaadi</string>
    <string name="userimage">User Image</string>
    <string name="description">Description</string>
    <string name="user_name">User Name</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="accept_button">accept_button</string>
    <string name="reject_button">reject_button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_accepted">Profile Accepted</string>
    <string name="profile_rejected">Profile Rejected</string>
</resources>
